--- a/vignettes/SGSeq.bib
+++ b/vignettes/SGSeq.bib
@@ -26,3 +26,25 @@ number = {8},
 pages = {e1003118},
 month = aug
 }
+
+@article{Anders:2012es,
+author = {Anders, S and Reyes, A and Huber, W},
+title = {{Detecting differential usage of exons from RNA-seq data}},
+journal = {Genome Research},
+year = {2012},
+volume = {22},
+number = {10},
+pages = {2008--2017},
+month = oct
+}
+
+@article{Ritchie:2015fa,
+author = {Ritchie, Matthew E and Phipson, Belinda and Wu, Di and Hu, Yifang and Law, Charity W and Shi, Wei and Smyth, Gordon K},
+title = {{limma powers differential expression analyses for RNA-sequencing and microarray studies.}},
+journal = {Nucleic Acids Research},
+year = {2015},
+volume = {43},
+number = {7},
+pages = {e47},
+month = apr
+}
