--- a/vignettes/SGSeq.bib
+++ b/vignettes/SGSeq.bib
@@ -48,3 +48,37 @@ number = {7},
 pages = {e47},
 month = apr
 }
+
+@article{Dobin:2013fg,
+author = {Dobin, Alexander and Davis, Carrie A and Schlesinger, Felix and Drenkow, Jorg and Zaleski, Chris and Jha, Sonali and Batut, Philippe and Chaisson, Mark and Gingeras, Thomas R},
+title = {{STAR: ultrafast universal RNA-seq aligner.}},
+journal = {Bioinformatics},
+year = {2013},
+volume = {29},
+number = {1},
+pages = {15--21},
+month = jan
+}
+
+@article{Kim:2015be,
+author = {Kim, Daehwan and Langmead, Ben and Salzberg, Steven L},
+title = {{HISAT: a fast spliced aligner with low memory requirements.}},
+journal = {Nature Methods},
+year = {2015},
+volume = {12},
+number = {4},
+pages = {357--360},
+month = apr
+}
+
+@article{Wu:2010ep,
+author = {Wu, Thomas D and Nacu, Serban},
+title = {{Fast and SNP-tolerant detection of complex variants and splicing in short reads.}},
+journal = {Bioinformatics},
+year = {2010},
+volume = {26},
+number = {7},
+pages = {873--881},
+month = apr
+}
+
